--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "prettier/prettier": ["error"],
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "react/prop-types": "off"
   }
 }
